2019-04-15  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el bugfixes to allow loading new tabs in background.
	(w3m-goto-url-new-session): add optional arg NO-POPUP; replace
	undocumented use of prefix-arg for RELOAD, with toggle of default
	NO-POPUP value.
	(w3m-copy-buffer): allow tab load in background; remove duplicate arg
	JUST-COPY, major efficiency gains by using clone-buffer instead of
	repeating entire w3m processing; replace undocumented use of prefix-arg
	for renaming new copy, with toggle of default BACKGROUND value.
	(w3m--goto-url--valid-url): adjust args for new format of
	w3m-copy-buffer.
	(w3m-view-this-url-1): pass arg NO-POPUP to allow tab
	load in background.

2019-04-14  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (emacs-w3m-version, w3m-version): Doc fix ([emacs-w3m:13330]).

2019-04-11  Vladimir Sedach  <vas@oneofus.la>

	* w3m-search.el (w3m-search-engine-alist): Use the lite version
	in the duckduckgo engine ([emacs-w3m:13336]).

2019-04-10  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-filter.el (w3m-filter-stackexchange): bugfix: re-search-forward
	instances needed parm NOERROR set non-nil.

2019-04-03  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-filter.el (w3m-filter-rt): Update for new site footers.

2019-03-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3mhack.el (w3mhack-insert-git-revision): Allow git-revision
	no matter what kind of object it is, including nil.

2019-03-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	Improve the travis build

	* .travis.yml: Separate the env var EMACS to EMACS and EMACS_EXE
	that are a common name and an executable name respectively.

	* aclocal.m4 (AC_CHECK_TEXINFO): Remove useless uppercase conversion.

2019-03-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	Make travis CI work for emacs25 on osx

	(Successful but emacs26 on osx got to fail; should be fixed...)

	Developers should note that the environment variable EMACS
	will be passed to the configure script as if it is specified with:
